package gov.hhs.aspr8.gcm.gcmprotobuf.properties.simobjects;

public class PropertyValueMap {
    Object propertyId;
    Object propertyValue;

    public Object getPropertyId() {
        return propertyId;
    }

    public void setPropertyId(Object propertyId) {
        this.propertyId = propertyId;
    }

    public Object getPropertyValue() {
        return propertyValue;
    }

    public void setPropertyValue(Object propertyValue) {
        this.propertyValue = propertyValue;
    }

}
